[package]
name = "zmk-battery-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zmk-battery-monitor"
path = "src/main.rs"

[[bin]]
name = "zmk-battery-tray"
path = "src/bin/tray.rs"

[[bin]]
name = "zmk-battery-config"
path = "src/bin/config.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
zbus = { version = "4.4", features = ["tokio"] }
anyhow = "1.0"
ksni = "0.2"
async-std = "1.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
